--- a/style.css
+++ b/style.css
@@ -10,3 +10,65 @@ body {
 }
 
 /* Add styles here! */
+
+h1 {
+  font-size: 2rem;
+  margin: 32px 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+p {
+  font-size: 1.25rem;
+  margin: 0;
+  padding: 16px 0;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  padding: 32px 48px;
+  margin-left: -48px;
+  max-width: fit-content;
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: 8px solid hsl(0deg, 0%, 40%);
+  height: 100%;
+  padding: 128px 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+.card {
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+  padding: 8px 32px;
+}
+
+header {
+  padding: 96px 16px 0;
+}
+
+.intro-chunk {
+  margin: 32px 0 64px 32px;
+}
+
+.max-width-wrapper {
+  background-color: hsl(0deg, 0%, 100%);
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.intro-chunk p {
+  max-width: 24rem;
+}
